--- a/src/global.css
+++ b/src/global.css
@@ -17,9 +17,17 @@
 }
 
 * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
   font-variation-settings: "slnt" 0;
   line-height: 140%;
+}
+
+body {
+  background: var(--gray-600);
 }
