--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,7 @@
 :root {
   --blue-500: #4EA8DE;
   --blue-700: #1E6F9F;
+  --blue-700-20: #1E6F9F33;
 
   --purple-500: #8284FA;
   --purple-700: #5E60CE;
