--- a/src/components/Checkbox.module.css
+++ b/src/components/Checkbox.module.css
@@ -8,8 +8,8 @@
 
 .checkbox::after {
   content: '';
-  width: 18px;
-  height: 18px;
+  width: 1.125rem;
+  height: 1.125rem;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -20,8 +20,8 @@
   box-sizing: border-box;
   color: var(--gray-100);
   font-weight: 700;
-  font-size: 10px;
-  line-height: 15px;
+  font-size: 0.625rem;
+  line-height: 0.938rem;
   text-align: center;
 }
 
