--- a/src/components/TaskList.module.css
+++ b/src/components/TaskList.module.css
@@ -1,7 +1,8 @@
 .taskList {
-  max-width: 46rem;
-  margin: -1.688rem auto 0;
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+  max-height: calc(100vh - 24.375rem);
+  overflow: auto;
+  padding-right: 4px;
 }
