--- a/src/global.css
+++ b/src/global.css
@@ -36,3 +36,20 @@
 body {
   background: var(--gray-600);
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--gray-400);
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  /* border: 1px solid var(--gray-400); */
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  background: var(--purple-700);
+}
